best-practices-cel/restrict-image-registries/.chainsaw-test/good-pods.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ir-pods-namespace
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01-registry
  namespace: ir-pods-namespace
spec:
  initContainers:
  - name: k8s-nginx-init
    image: bar.io/nginx
  containers:
  - name: k8s-nginx
    image: eu.foo.io/nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02-registry
  namespace: ir-pods-namespace
spec:
  initContainers:
  - name: nginx-init
    image: bar.io/nginx
  - name: busybox-init
    image: eu.foo.io/busybox
  containers:
  - name: k8s-nginx
    image: bar.io/nginx
  - name: busybox
    image: eu.foo.io/busybox
